// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H2 should allow weight to be overridden 1`] = `
.glamor-1 {
  display: block;
  vertical-align: bottom;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  text-align: unset;
  text-decoration: inherit;
  font-weight: 300;
  font-size: 18px;
  color: rgb(55,69,97);
}

.glamor-1:hover {
  text-decoration: inherit;
}

.glamor-1 strong {
  font-weight: 500;
}

<h2
  className="root glamor-0 glamor-1"
  color="navy700"
  onClick={undefined}
  size="large"
  style={Object {}}
>
  An H2 Tag
</h2>
`;

exports[`H2 should render shallow component ok 1`] = `
.glamor-1 {
  display: block;
  vertical-align: bottom;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  text-align: unset;
  text-decoration: inherit;
  font-weight: 600;
  font-size: 18px;
  color: rgb(55,69,97);
}

.glamor-1:hover {
  text-decoration: inherit;
}

.glamor-1 strong {
  font-weight: 500;
}

<h2
  className="root glamor-0 glamor-1"
  color="navy700"
  onClick={undefined}
  size="large"
  style={Object {}}
>
  An H2 Tag
</h2>
`;
